# CPU-Scheduler-Simulator

./: .gitignore  README.md
schedulers/: FCFS.h  SJF_prm.cpp  SJF_prm.h  scheduler.h
src/: CMakeLists.txt  app.cpp  resources.qrc
src/core/: FCFS.cpp  FCFS.h  RRS.h  SJF.cpp  SJF.h  SJF_non_prm.cpp  event.h  priority.cpp  priority_non_prm.cpp  priority_non_prm.h  process.h  scheduler.h  simulator.cpp  simulator.h
src/core/models/: event.h  process.h
src/core/schedulers/: FCFS.cpp  FCFS.h  RR.cpp  RR.h  SJF.cpp  SJF.h  SJF_non_prm.cpp  SJF_non_prm.h  SJF_prm.cpp  SJF_prm.h  priority.cpp  priority.h  priority_non_prm.cpp  scheduler.h
src/gui/: App.xaml  App.xaml.cpp  App.xaml.h  MainWindow.cpp  MainWindow.h  MainWindow.idl  MainWindow.ui  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  app.manifest  demo.vcxproj  demo.vcxproj.filters  readme.txt
src/gui/Generated Files/: App.xaml  App.xaml.g.h  App.xaml.g.hpp  App.xbf  MainWindow.g.cpp  MainWindow.g.h  MainWindow.xaml  MainWindow.xaml.g.h  MainWindow.xaml.g.hpp  MainWindow.xbf  XamlBindingInfo.xaml.g.h  XamlBindingInfo.xaml.g.hpp  XamlMetaDataProvider.g.cpp  XamlMetaDataProvider.g.h  XamlMetaDataProvider.h  XamlMetaDataProvider.idl  XamlTypeInfo.Impl.g.cpp  XamlTypeInfo.g.cpp  XamlTypeInfo.xaml.g.h  module.g.cpp
src/gui/Generated Files/sources/: MainWindow.cpp  MainWindow.h  XamlMetaDataProvider.cpp  XamlMetaDataProvider.h
src/gui/Generated Files/winrt/: Microsoft.UI.Xaml.Automation.Peers.h  demo.h
src/gui/Generated Files/winrt/impl/: Microsoft.UI.Xaml.Automation.Peers.0.h  Microsoft.UI.Xaml.Automation.Peers.1.h  Microsoft.UI.Xaml.Automation.Peers.2.h  Microsoft.UI.Xaml.Controls.0.h  Microsoft.UI.Xaml.Controls.1.h  Microsoft.UI.Xaml.Controls.2.h  Microsoft.Windows.ApplicationModel.WindowsAppRuntime.0.h  demo.0.h  demo.1.h  demo.2.h
